--- a/index.html
+++ b/index.html
@@ -1,33 +1,97 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Lezione CSS</title>
+  </head>
 
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<title>Lezione CSS</title>
-		<link rel="stylesheet" href="style.css"/>
-	</head>
-
-	<body>
-
-		<blockquote class="content1">
-			<p>Lorem ipsum dolor sit amet,
-				<em class="variant-em">consectetur adipisicing elit</em>. Doloribus in iusto sed soluta
-			   suscipit? Assumenda autem, <em>delectus distinctio dolore earum</em>,
-			   expedita fugit ipsa libero officia qui, reiciendis tempore temporibus? Harum.
-			</p>
-		</blockquote>
-
-		<blockquote>
-			<ul>
-				<li>Default <a href="#">link</a> color</li>
-				<li class="link1">Inherit the <a href="#">link</a> color</li>
-				<li class="link2">Reset the <a href="#">link</a> color</li>
-				<li class="link3">Unset the <a href="#">link</a> color</li>
-			</ul>
-		</blockquote>
-
-	</body>
-
+  <body>
+    <table>
+      <caption>
+        Entrate e uscite
+      </caption>
+      <thead>
+        <tr>
+          <th>Mese</th>
+          <th>Entrate</th>
+          <th>Uscite</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Gennaio</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Febbraio</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Marzo</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Aprile</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Maggio</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Giugno</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Luglio</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Agosto</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Settembre</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Ottobre</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Novembre</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>Dicembre</td>
+          <td>10</td>
+          <td>9</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Totale</td>
+          <td>120</td>
+          <td>108</td>
+        </tr>
+      </tfoot>
+    </table>
+  </body>
 </html>
