Update index.html flexbox

--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
-<html>
-
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<title>Lezione CSS</title>
-		<link rel="stylesheet" href="style.css"/>
-	</head>
-
-	<body>
-
-		<blockquote class="content1">
-			<p>Lorem ipsum dolor sit amet,
-				<em class="variant-em">consectetur adipisicing elit</em>. Doloribus in iusto sed soluta
-			   suscipit? Assumenda autem, <em>delectus distinctio dolore earum</em>,
-			   expedita fugit ipsa libero officia qui, reiciendis tempore temporibus? Harum.
-			</p>
-		</blockquote>
-
-		<blockquote>
-			<ul>
-				<li>Default <a href="#">link</a> color</li>
-				<li class="link1">Inherit the <a href="#">link</a> color</li>
-				<li class="link2">Reset the <a href="#">link</a> color</li>
-				<li class="link3">Unset the <a href="#">link</a> color</li>
-			</ul>
-		</blockquote>
-
-	</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>CSS Lessons</title>
+  </head>
+  <body>
+    <aside>
+      <div class="logo">LOGO</div>
+      <div class="links">
+        <ul>
+          <li><a href="" class="aside-links">Link 1</a></li>
+          <li><a href="" class="aside-links">Link 2</a></li>
+          <li><a href="" class="aside-links">Link 3</a></li>
+          <li><a href="" class="aside-links">Link 4</a></li>
+        </ul>
+      </div>
+      <div class="user">
+        <div class="avatar">AVATAR</div>
+        <div>Riccardo Cuomo</div>
+      </div>
+    </aside>
+  </body>
 </html>
