--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<title>Lezione CSS</title>
-		<link rel="stylesheet" href="style.css"/>
-	</head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blocks</title>
+  <link rel="stylesheet" href="start.css">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-	<body>
-
-		<blockquote class="content1">
-			<p>Lorem ipsum dolor sit amet,
-				<em class="variant-em">consectetur adipisicing elit</em>. Doloribus in iusto sed soluta
-			   suscipit? Assumenda autem, <em>delectus distinctio dolore earum</em>,
-			   expedita fugit ipsa libero officia qui, reiciendis tempore temporibus? Harum.
-			</p>
-		</blockquote>
-
-		<blockquote>
-			<ul>
-				<li>Default <a href="#">link</a> color</li>
-				<li class="link1">Inherit the <a href="#">link</a> color</li>
-				<li class="link2">Reset the <a href="#">link</a> color</li>
-				<li class="link3">Unset the <a href="#">link</a> color</li>
-			</ul>
-		</blockquote>
-
-	</body>
+<body>
+  <section id="green">
+    <p>GREEN</p>
+  </section>
+  <section id="yellow">
+    <p>YELLOW</p>
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
+  </section>
+  <section id="orange">
+    <p>ORANGE</p>
+  </section>
+  <section id="red">
+    <p>RED</p>
+    <ul>
+      <li>A</li>
+      <li>B</li>
+      <li>C</li>
+      <li>D</li>
+    </ul>
+  </section>
+  <section id="blue">
+    <p>BLUE</p>
+  </section>
+</body>
 
 </html>
