Update index.html grid

--- a/index.html
+++ b/index.html
@@ -1,43 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blocks</title>
-  <link rel="stylesheet" href="start.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <section id="green">
-    <p>GREEN</p>
-  </section>
-  <section id="yellow">
-    <p>YELLOW</p>
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-    </ul>
-  </section>
-  <section id="orange">
-    <p>ORANGE</p>
-  </section>
-  <section id="red">
-    <p>RED</p>
-    <ul>
-      <li>A</li>
-      <li>B</li>
-      <li>C</li>
-      <li>D</li>
-    </ul>
-  </section>
-  <section id="blue">
-    <p>BLUE</p>
-  </section>
-</body>
-
+<html lang="it">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lezioni CSS</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <header id="display">
+        <p>0</p>
+      </header>
+      <section>
+        <button class="op" id="piu">+</button>
+        <button class="op" id="meno">-</button>
+        <button class="op" id="per">x</button>
+        <button class="op" id="divide">÷</button>
+        <button id="seven">7</button>
+        <button id="eight">8</button>
+        <button id="nine">9</button>
+        <button id="four">4</button>
+        <button id="five">5</button>
+        <button id="six">6</button>
+        <button id="one">1</button>
+        <button id="two">2</button>
+        <button id="three">3</button>
+        <button id="zero">0</button>
+        <button id="dot">.</button>
+        <button id="ac">AC</button>
+        <button id="equal">=</button>
+      </section>
+    </main>
+  </body>
 </html>
