--- a/index.html
+++ b/index.html
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blocks</title>
-  <link rel="stylesheet" href="start.css">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
+    <title>Navbar</title>
 </head>
-
 <body>
-  <section id="green">
-    <p>GREEN</p>
-  </section>
-  <section id="yellow">
-    <p>YELLOW</p>
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-    </ul>
-  </section>
-  <section id="orange">
-    <p>ORANGE</p>
-  </section>
-  <section id="red">
-    <p>RED</p>
-    <ul>
-      <li>A</li>
-      <li>B</li>
-      <li>C</li>
-      <li>D</li>
-    </ul>
-  </section>
-  <section id="blue">
-    <p>BLUE</p>
-  </section>
+  <div class="navbar">
+    <div class="links">
+      <a href="#">Navbar</a>
+      <a href="#">Home</a>
+      <a href="#">Link</a>
+      <div class="dropdown">
+        <div class="dropbtn">Dropdown &#8595
+            <div class="dropdown-content">
+              <a href="#">1</a>
+              <a href="#">2</a>
+              <a href="#">3</a>
+            </div>
+        </div>
+      </div>
+      <a href="#" disabled>Disabled</a>
+      <div class="search-container">
+        <form action="/search" method="GET">
+          <input type="text" placeholder="Search" name="search">
+          <button type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+  </div>
 </body>
-
 </html>
