Update index.html mediaquery

--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <title>Navbar</title>
-</head>
-<body>
-  <div class="navbar">
-    <div class="links">
-      <a href="#">Navbar</a>
-      <a href="#">Home</a>
-      <a href="#">Link</a>
-      <div class="dropdown">
-        <div class="dropbtn">Dropdown &#8595
-            <div class="dropdown-content">
-              <a href="#">1</a>
-              <a href="#">2</a>
-              <a href="#">3</a>
-            </div>
-        </div>
+<html lang="it">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Layout Responsive</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <h4>Mario Rossi</h4>
+        <h5>Mer, 13/12/2001</h5>
+        <img
+          src="https://www.my-personaltrainer.it/2023/11/24/gatto-europeo_900x760.jpeg"
+        />
+        <p>
+          gatto: Lorem ipsum dolor sit amet, consectetur adipisici elit, sed
+          eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquid ex ea commodi consequat.
+        </p>
       </div>
-      <a href="#" disabled>Disabled</a>
-      <div class="search-container">
-        <form action="/search" method="GET">
-          <input type="text" placeholder="Search" name="search">
-          <button type="submit">Search</button>
-        </form>
+      <div class="card">
+        <h4>Elis Miao</h4>
+        <h5>Lun, 17/12/2001</h5>
+        <img
+          src="https://www.my-personaltrainer.it/2023/11/24/gatto-europeo_900x760.jpeg"
+        />
+        <p>
+          gatto: Lorem ipsum dolor sit amet, consectetur adipisici elit, sed
+          eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquid ex ea commodi consequat.
+        </p>
+      </div>
+      <div class="card">
+        <h4>Gatto Micino</h4>
+        <h5>Gio, 22/12/2001</h5>
+        <img
+          src="https://www.my-personaltrainer.it/2023/11/24/gatto-europeo_900x760.jpeg"
+        />
+        <p>
+          gatto: Lorem ipsum dolor sit amet, consectetur adipisici elit, sed
+          eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquid ex ea commodi consequat.
+        </p>
       </div>
     </div>
-    <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
